--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 fastapi
 uvicorn
 python-multipart
@@ -47,6 +46,11 @@ python-jose[cryptography]
 passlib[bcrypt]
 python-dateutil
 bcrypt<4
+
+# Document conversion utilities
+reportlab>=4.0.0  # For TXT to PDF conversion
+markdown>=3.4.0  # For MD to HTML conversion
+weasyprint>=60.0  # For HTML to PDF conversion (MD files)
 
 python-dotenv
 httpx
